[gd_scene load_steps=13 format=3 uid="uid://blqvokibawfo1"]

[ext_resource type="Script" path="res://scripts/game_screen.gd" id="1_ixejw"]
[ext_resource type="Script" path="res://scripts/tetris_grid.gd" id="2_xylrp"]
[ext_resource type="Script" path="res://scripts/player_ui.gd" id="3_ayr1q"]
[ext_resource type="Script" path="res://scripts/player_controller.gd" id="4_vc38c"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="5_yt6rl"]
[ext_resource type="Script" path="res://scripts/power_up_system.gd" id="6_5gpwx"]
[ext_resource type="Script" path="res://scripts/power_up_effects.gd" id="7_ptrpc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3sws"]
bg_color = Color(0.0588235, 0.0627451, 0.207843, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yiuyp"]
bg_color = Color(0.105882, 0.105882, 0.25098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_dlk1e"]
resource_name = "pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.7), Color(1, 1, 1, 1), Color(1, 1, 1, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2f1mr"]
_data = {
"pulse": SubResource("Animation_dlk1e")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pj3qv"]
bg_color = Color(0.0588235, 0.0627451, 0.207843, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.258824, 0.517647, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixejw")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0627451, 0.207843, 1)

[node name="GridPattern" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0627451, 0.207843, 1)

[node name="HorizontalLines" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VerticalLines" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerArea1" type="Panel"]
custom_minimum_size = Vector2(300, 600)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t3sws")

[node name="TetrisGrid" type="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -250.0
offset_right = 125.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xylrp")

[node name="GridBackground" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.129412, 0.6)

[node name="GridLines" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blocks" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerUI" type="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -80.0
offset_bottom = -10.0
grow_horizontal = 2
script = ExtResource("3_ayr1q")

[node name="PlayerLabel" type="Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Jogador 1"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 56.0
text = "Pontos:"

[node name="ScoreValue" type="Label"]
layout_mode = 0
offset_left = 110.0
offset_top = 30.0
offset_right = 290.0
offset_bottom = 56.0
text = "0"
horizontal_alignment = 2

[node name="LevelLabel" type="Label"]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 86.0
text = "Nível:"

[node name="LevelValue" type="Label"]
layout_mode = 0
offset_left = 110.0
offset_top = 60.0
offset_right = 290.0
offset_bottom = 86.0
text = "1"
horizontal_alignment = 2

[node name="NextPieceLabel" type="Label"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 530.0
offset_right = -10.0
offset_bottom = 556.0
grow_horizontal = 0
text = "Próxima peça:"

[node name="NextPieceDisplay" type="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 560.0
offset_right = -10.0
offset_bottom = 650.0
grow_horizontal = 0

[node name="PowerUpsLabel" type="Label"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 400.0
offset_right = -10.0
offset_bottom = 426.0
grow_horizontal = 0
text = "Power-ups disponíveis:"

[node name="PowerUpsContainer" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 430.0
offset_right = -10.0
offset_bottom = 526.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="NotificationLabel" type="Label"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 550.0
offset_right = 150.0
offset_bottom = 590.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Mensagem de notificação"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NotificationTimer" type="Timer"]
one_shot = true

[node name="PlayerController" type="Node"]
script = ExtResource("4_vc38c")

[node name="PlayerArea2" type="Panel"]
custom_minimum_size = Vector2(300, 600)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = -50.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yiuyp")

[node name="TetrisGrid" type="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -250.0
offset_right = 125.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xylrp")

[node name="GridBackground" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.129412, 0.6)

[node name="GridLines" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blocks" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerUI" type="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -80.0
offset_bottom = -10.0
grow_horizontal = 2
script = ExtResource("3_ayr1q")

[node name="PlayerLabel" type="Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Jogador 2"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 56.0
text = "Pontos:"

[node name="ScoreValue" type="Label"]
layout_mode = 0
offset_left = 110.0
offset_top = 30.0
offset_right = 290.0
offset_bottom = 56.0
text = "0"
horizontal_alignment = 2

[node name="LevelLabel" type="Label"]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 86.0
text = "Nível:"

[node name="LevelValue" type="Label"]
layout_mode = 0
offset_left = 110.0
offset_top = 60.0
offset_right = 290.0
offset_bottom = 86.0
text = "1"
horizontal_alignment = 2

[node name="NextPieceLabel" type="Label"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 530.0
offset_right = -10.0
offset_bottom = 556.0
grow_horizontal = 0
text = "Próxima peça:"

[node name="NextPieceDisplay" type="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 560.0
offset_right = -10.0
offset_bottom = 650.0
grow_horizontal = 0

[node name="PowerUpsLabel" type="Label"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 400.0
offset_right = -10.0
offset_bottom = 426.0
grow_horizontal = 0
text = "Power-ups disponíveis:"

[node name="PowerUpsContainer" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 430.0
offset_right = -10.0
offset_bottom = 526.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="NotificationLabel" type="Label"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 550.0
offset_right = 150.0
offset_bottom = 590.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Mensagem de notificação"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NotificationTimer" type="Timer"]
one_shot = true

[node name="PlayerController" type="Node"]
script = ExtResource("4_vc38c")

[node name="VSLabel" type="Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 100
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUpSystem" type="Node"]
script = ExtResource("6_5gpwx")

[node name="PowerUpEffects" type="Node"]
script = ExtResource("7_ptrpc")

[node name="PowerUpIndicator" type="Label"]
visible = false
modulate = Color(1, 1, 1, 0.7)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -26.0
offset_right = 50.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 36
text = "POWER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer"]
root_node = NodePath("../PowerUpIndicator")
libraries = {
"": SubResource("AnimationLibrary_2f1mr")
}
autoplay = "pulse"

[node name="GameManager" type="Node"]
script = ExtResource("5_yt6rl")

[node name="CountdownLabel" type="Label"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 80
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pj3qv")

[node name="GameOverLabel" type="Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_top = 20.0
offset_right = 96.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="WinnerLabel" type="Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_top = 70.0
offset_right = 195.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Jogador 1 Venceu!"
horizontal_alignment = 1

[node name="ReplayButton" type="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Jogar Novamente"

[node name="MenuButton" type="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Menu Principal"

[connection signal="pressed" from="GameOverPanel/ReplayButton" to="GameManager" method="restart_game"]
[connection signal="pressed" from="GameOverPanel/MenuButton" to="GameManager" method="return_to_menu"] 